removed bugs, ambiguity symbols are now handled correctly, GUI now display similarity instead of distance as required